# crawler

./: .gitignore  README.md  example.blacklist.txt  main.py  pyproject.toml
src/crawler/: __init__.py  constants.py  core.py  models.py  utils.py
tests/: test_core.py  test_utils.py
